# Sistema-Academico

./: .coveragerc  .env.example  .gitignore  Dockerfile  Jenkinsfile  README.md  REFACTORING_REPORT.md  models.py  pyproject.toml  pytest.ini  requirements.txt  run.py  sonar-project.properties
Model/Dominio/: administrador.py  anuncio.py  estudiante.py  iadministradorrepositorio.py  padre.py
Model/Notas/: asistencia.py  calificacion.py  curso.py  profesor.py
Model/Servicios/: notificaciones.py  reportes_impl.py  servicioNotificaciones.py  servicioReportes.py
app/: __init__.py  config.py  database.py  default.py
app/api/: qualification_routes.py
app/application/: admin_controller.py  announcement_controller.py  auth_controller.py  course_controller.py  dashboard_controller.py  login_controller.py  qualification_controller.py  report_controller.py  user_courses_controller.py
app/domain/: entities.py  roles.py
app/infrastructure/: database.py
app/routes/: admin_routes.py  announcement_routes.py  auth_routes.py  course_routes.py  dashboard_routes.py  grades_routes.py  login_routes.py  main_routes.py  notas_routes.py  qualification_routes.py  report_routes.py  user_courses_routes.py  user_route.py
app/services/: calificacion_service.py  servicioreportes.py
backend/: pytest.ini  requirements.txt
backend/app/: __init__.py
backend/scripts/: test_data.py
backend/tests/: conftest.py
docs/: Sistema_Academico.mdj
domain/models/: administrador.py  anuncio.py  iprofesorrepositorio.py  profesor.py
frontend/: package-lock.json  package.json
frontend/src/: main.js
infrastructure/repository/: mapper.py  models.py  repository.py
interfaces/controllers/: anuncios_controlador.py  calificaciones_controller.py  curso_controlador.py  notas_controlador.py
interfaces/repositorio/: iadminrepositorio.py  ianunciorepositorio.py  icalificacion_repositorio.py  icursorepositorio.py  iprofesorrepositorio.py
interfaces/repository/: iusuariorepositorio.py
interfaces/templates/: layout.html
reports/ZAP/: 2025-12-03-ZAP-Report-.html
scripts/: seed_admin.py
service/mysql/: admin_repositorio_impl.py  anuncio_repositorio_impl.py  base.py  calificacion_repositorio_impl.py  curso_repositorio_impl.py  padre_repositorio_impl.py  profesor_repositorio_impl.py
static/css/: base_dashboard.css  calificar.css  cursos_profesor.css  dashboard_courses.css  formulario_reporte.css  layout.css  layout_reporte.css  (+4 more)
templates/: layout.html  navbar.html
tests/: test.py
(+179 files in other folders)
