[tool.poetry]
name = "sistema-academico"
version = "0.1.0"
description = ""
authors = ["NandUNSAS <fsuca@unsa.edu.pe>"]
readme = "README.md"
packages = [
    { include = "app", from = "backend" }
]
include = [
    "static/**",
    "templates/**"
]
[tool.poetry.dependencies]
python = ">=3.12, <4.0"
blinker = "1.9.0"
click = "8.2.1"
flask = "3.1.1"
flask-sqlalchemy = "3.1.1"
greenlet = "3.2.3"
itsdangerous = "2.2.0"
jinja2 = "3.1.6"
markupsafe = "3.0.2"
mysql-connector-python = "9.3.0"
python-dotenv = "1.1.1"
sqlalchemy = "2.0.41"
typing-extensions = "4.15.0"
werkzeug = "3.1.3"
flask-swagger-ui = "5.21.0"

[tool.poetry.group.dev]
optional = false

[tool.poetry.group.dev.dependencies]
coverage = "7.11.0"
pytest = "8.3.3"
pytest-cov = "4.1.0"
selenium = "4.38.0"
flask-sqlalchemy = "3.1.1"
flask-cors = "6.0.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
